--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.gfunk"
-    xmlns:tools="http://schemas.android.com/tools"
+    package="com.geminiassist"
     android:versionCode="1"
-    android:versionName="1.0" >
+	android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="21"
-        android:targetSdkVersion="30" />
+    
+    <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="31"/>
 
     <application
         android:allowBackup="true"
@@ -15,10 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.MyApplication">
         <activity
-            android:name="com.gfunk.MainActivity"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
