--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.gfunk"
+        applicationId "com.geminiassist"
         minSdk 28
         targetSdk 31
         versionCode 1
@@ -26,6 +26,6 @@ android {
 }
 
 dependencies {
-	// CodeAssist does not support adding dependencies here,
-	// try using the library manager instead
+	// NOTE: CodeAssist does NOT support adding dependencies here, 
+	// use the library manager instead
 }
